# sql-agent-demo

./: README.md  package-lock.json  package.json  test.py
backend/: .env  README.md  app.ts  database_handler.py  main.py  nohup.out  package-lock.json  package.json  pyproject.toml  requirements.txt  server.js  suit_store.db  test_connection.py  tsconfig.json  uwsgi.ini
backend/config/: database.ts
backend/graph/: package-lock.json  package.json  server.js
frontend/: .env  README.md  package-lock.json  package.json  tsconfig.json
frontend/public/: asset-manifest.json  index.html
frontend/public/static/css/: main.049a4890.css  main.049a4890.css.map
frontend/public/static/js/: main.155761ba.js  main.155761ba.js.LICENSE.txt  main.57a14590.js  main.95b6bc44.js  main.e050ae05.js
frontend/public/static/media/: index.7127fd5e2558ffce63af.less  index.72695c1b979759d8c2bd.less
frontend/src/: App.tsx  global.d.ts  index.css  index.tsx  recharts.d.ts
frontend/src/components/: AppBar.tsx  ChatInterface.jsx  LanguageSelector.tsx  Layout.tsx  ThinkingSidebar.jsx
frontend/src/config/: api.ts
frontend/src/i18n/: i18n.ts
frontend/src/i18n/locales/: en.json  (+1 more)
frontend/src/services/: api.js
frontend/src/utils/: tableGenerator.ts  textGenerator.ts
n8n/: .gitignore  Dockerfile  README.md  docker-compose.yml  package.json  send_webhook_request.py  tailwind.config.js
n8n/public/: index.html
n8n/src/: App.css  App.jsx
n8n/src/components/: ChatInterface.jsx  PDFProgressModal.jsx  ThinkingSidebar.jsx
n8n/src/services/: api.js
n8n/src/utils/: pdfGenerator.js
(+12 files in other folders)
